# boomai

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  SECURITY.md  package.json  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
boomai-core/: Cargo.toml
boomai-core/src/: agent.rs  lib.rs  provider.rs  types.rs
boomai-daemon/: Cargo.toml
boomai-daemon/src/: config.rs  config_persistence.rs  handlers.rs  local.rs  main.rs  maker.rs  state.rs  system.rs
boomai-daemon/src/agents/: calculator.rs  classifier.rs  decomposer.rs  interrogator.rs  mod.rs  orchestrator.rs  red_flag.rs  router.rs  step.rs  verifier.rs  voting.rs
boomai-daemon/src/core/: agent.rs  capabilities.rs  mod.rs  model_request.rs  provider.rs  provider_error.rs  provider_registry.rs  provider_runner.rs  taint.rs  tool_envelope.rs  types.rs  visibility.rs
boomai-daemon/src/core/providers/: http.rs  mod.rs
boomai-daemon/src/mcp/: client.rs  manager.rs  types.rs
boomai-daemon/src/safety/: mod.rs
boomai-daemon/src/tools/: mod.rs  router.rs  stubs.rs
boomai-daemon/tests/common/: mod.rs
boomai-daemon/tests/integration/: provider_integration.rs
core/: package-lock.json  package.json  tsconfig.json
core/src/: index.ts
desktop/: index.html  package-lock.json  package.json
desktop/src/: App.css  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: FUTURE.md  architecture.md  contributing.md  overview.md  setup.md  versioning.md
(+17 files in other folders)
