[package]
name = "boomai-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
boomai-core = { path = "../boomai-core" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
tokio-util = { version = "0.7.17", features = ["codec"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
url = "2.5"

