[package]
name = "boomai-daemon"
version = "0.2.8"
edition = "2021"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
tokio-util = { version = "0.7.17", features = ["codec"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
anyhow = "1.0.100"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
url = "2.5"
evalexpr = "13.1.0"
regex = "1.11"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
tracing-appender = "0.2"
keyring = "2.3"

